[package]
name = "wafermap-wasm"
version = "0.1.0"
authors = ["kaixiang.qiu <kaixiang.qiu@guwave.com>"]
edition = "2018"

[lib]
name = "wafermap"
crate-type = ["cdylib"]

[features]

[dependencies]
wasm-bindgen = "0.2.85"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
